--- a/package.json
+++ b/package.json
@@ -1,48 +1,51 @@
 {
-  "name": "resume",
-  "version": "0.1.0",
+  "name": "best-resume-ever-creative-react",
+  "version": "1.0.0",
   "private": true,
+  "author": {
+    "name": "LolipopJ",
+    "email": "lolipop0703@qq.com"
+  },
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
+    "serve": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
     "export": "concurrently \"npm run serve\" \"node scripts/export.js\" --success first --kill-others"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.2.0",
-    "@mdi/font": "^6.9.96",
-    "core-js": "^3.25.5",
-    "js-yaml": "^4.1.0",
+    "classnames": "^2.5.1",
     "lodash": "^4.17.21",
-    "vue": "^2.7.10",
-    "vue-router": "^3.6.5"
+    "next": "^14.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.19",
-    "@vue/cli-plugin-eslint": "~4.5.19",
-    "@vue/cli-plugin-router": "~4.5.19",
-    "@vue/cli-service": "~4.5.19",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "babel-eslint": "^10.1.0",
-    "concurrently": "7.4.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-prettier": "^3.4.1",
-    "eslint-plugin-vue": "^6.2.2",
-    "less": "^4.1.3",
-    "less-loader": "^7.3.0",
-    "lint-staged": "^9.5.0",
-    "prettier": "^2.7.1",
-    "puppeteer": "13.7.0",
-    "rxjs": "7.5.7",
-    "vue-template-compiler": "^2.7.10"
+    "@types/lodash": "^4.17.1",
+    "@types/node": "^20.12.10",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.19",
+    "concurrently": "^8.2.2",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.3",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "lint-staged": "^15.2.2",
+    "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
+    "puppeteer": "^22.8.0",
+    "rxjs": "7.8.1",
+    "sass": "^1.77.0",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
   },
   "lint-staged": {
-    "*.{js,jsx,vue}": [
-      "vue-cli-service lint",
-      "git add"
+    "*.{ts,tsx}": [
+      "npm run lint"
     ]
   }
 }
