fix(selfie): fix base path error

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "best-resume-ever-creative-react",
   "version": "1.0.0",
+  "type": "module",
   "private": true,
   "author": {
     "name": "LolipopJ",
