--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "lint-staged": "^15.2.8",
+    "pdf-lib": "^1.17.1",
     "postcss": "^8.4.41",
     "prettier": "^3.3.3",
     "puppeteer": "^22.15.0",
