--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Resume Deployment
+name: Deploy Resume Site
 
 on:
   push:
@@ -9,25 +9,23 @@ jobs:
   pages:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Use Node.js 18.x
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: "18"
           cache: "yarn"
-      - name: Cache NPM dependencies
-        uses: actions/cache@v4
-        with:
-          path: node_modules
-          key: ${{ runner.OS }}-npm-cache
-          restore-keys: |
-            ${{ runner.OS }}-npm-cache
+
       - name: Install Dependencies
         run: |
           yarn
+
       - name: Build
         run: |
           yarn build
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
         with:
